gen/rocks/blackcat/vcl/parser/VCLParser.java
// This is a generated file. Not intended for manual editing.
package rocks.blackcat.vcl.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static rocks.blackcat.vcl.psi.VCLTypes.*;
import static rocks.blackcat.vcl.parser.VCLParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class VCLParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACL) {
      r = ACL(b, 0);
    }
    else if (t == ACL_ENTRY) {
      r = ACL_ENTRY(b, 0);
    }
    else if (t == ACL_PART) {
      r = ACL_PART(b, 0);
    }
    else if (t == ACTION) {
      r = ACTION(b, 0);
    }
    else if (t == BACKEND) {
      r = BACKEND(b, 0);
    }
    else if (t == BEREQ) {
      r = BEREQ(b, 0);
    }
    else if (t == BERESP) {
      r = BERESP(b, 0);
    }
    else if (t == BUITLIN) {
      r = BUITLIN(b, 0);
    }
    else if (t == CALL) {
      r = CALL(b, 0);
    }
    else if (t == CLIENT) {
      r = CLIENT(b, 0);
    }
    else if (t == COMPOUND) {
      r = COMPOUND(b, 0);
    }
    else if (t == CONDITION) {
      r = CONDITION(b, 0);
    }
    else if (t == DIRECTOR) {
      r = DIRECTOR(b, 0);
    }
    else if (t == ELSE) {
      r = ELSE(b, 0);
    }
    else if (t == ERROR) {
      r = ERROR(b, 0);
    }
    else if (t == EXPRESSION) {
      r = EXPRESSION(b, 0);
    }
    else if (t == F_CALL) {
      r = F_CALL(b, 0);
    }
    else if (t == F_SYNTH) {
      r = F_SYNTH(b, 0);
    }
    else if (t == HEADER) {
      r = HEADER(b, 0);
    }
    else if (t == IF_STATEMENT) {
      r = IF_STATEMENT(b, 0);
    }
    else if (t == IMPORT) {
      r = IMPORT(b, 0);
    }
    else if (t == INCLUDE) {
      r = INCLUDE(b, 0);
    }
    else if (t == INLINE_C) {
      r = INLINE_C(b, 0);
    }
    else if (t == LITERAL) {
      r = LITERAL(b, 0);
    }
    else if (t == LOCAL) {
      r = LOCAL(b, 0);
    }
    else if (t == LONG_STRING) {
      r = LONG_STRING(b, 0);
    }
    else if (t == NETMASK) {
      r = NETMASK(b, 0);
    }
    else if (t == NEW) {
      r = NEW(b, 0);
    }
    else if (t == NOW) {
      r = NOW(b, 0);
    }
    else if (t == OBJ) {
      r = OBJ(b, 0);
    }
    else if (t == OBJECT) {
      r = OBJECT(b, 0);
    }
    else if (t == OBJECT_INTERNAL) {
      r = OBJECT_INTERNAL(b, 0);
    }
    else if (t == OPERATION) {
      r = OPERATION(b, 0);
    }
    else if (t == OPERATION_INTERNAL) {
      r = OPERATION_INTERNAL(b, 0);
    }
    else if (t == PROBE) {
      r = PROBE(b, 0);
    }
    else if (t == PROBE_INTERNAL) {
      r = PROBE_INTERNAL(b, 0);
    }
    else if (t == PURGE) {
      r = PURGE(b, 0);
    }
    else if (t == REMOTE) {
      r = REMOTE(b, 0);
    }
    else if (t == REQ) {
      r = REQ(b, 0);
    }
    else if (t == REQ_TOP) {
      r = REQ_TOP(b, 0);
    }
    else if (t == RESP) {
      r = RESP(b, 0);
    }
    else if (t == RETURN) {
      r = RETURN(b, 0);
    }
    else if (t == SERVER) {
      r = SERVER(b, 0);
    }
    else if (t == SET) {
      r = SET(b, 0);
    }
    else if (t == STATEMENT) {
      r = STATEMENT(b, 0);
    }
    else if (t == STORAGE) {
      r = STORAGE(b, 0);
    }
    else if (t == STRINGS) {
      r = STRINGS(b, 0);
    }
    else if (t == STRINGS_INTERNAL) {
      r = STRINGS_INTERNAL(b, 0);
    }
    else if (t == SUB) {
      r = SUB(b, 0);
    }
    else if (t == SYNTHETIC) {
      r = SYNTHETIC(b, 0);
    }
    else if (t == UNSET) {
      r = UNSET(b, 0);
    }
    else if (t == VALUE) {
      r = VALUE(b, 0);
    }
    else if (t == VARIABLE) {
      r = VARIABLE(b, 0);
    }
    else if (t == VERSION) {
      r = VERSION(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // 'acl' identifier '{'ACL_ENTRY'}'
  public static boolean ACL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL")) return false;
    if (!nextTokenIs(b, "<keyword>", KEYWORD_ACL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACL, "<keyword>");
    r = consumeTokens(b, 0, KEYWORD_ACL, IDENTIFIER, LC);
    r = r && ACL_ENTRY(b, l + 1);
    r = r && consumeToken(b, RC);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (ACL_PART ';' | BLANK) *
  public static boolean ACL_ENTRY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_ENTRY")) return false;
    Marker m = enter_section_(b, l, _NONE_, ACL_ENTRY, "<acl entry>");
    int c = current_position_(b);
    while (true) {
      if (!ACL_ENTRY_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ACL_ENTRY", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // ACL_PART ';' | BLANK
  private static boolean ACL_ENTRY_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_ENTRY_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ACL_ENTRY_0_0(b, l + 1);
    if (!r) r = consumeToken(b, BLANK);
    exit_section_(b, m, null, r);
    return r;
  }

  // ACL_PART ';'
  private static boolean ACL_ENTRY_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_ENTRY_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ACL_PART(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ['!'] ( NETMASK | string [])
  public static boolean ACL_PART(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_PART")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACL_PART, "<acl part>");
    r = ACL_PART_0(b, l + 1);
    r = r && ACL_PART_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['!']
  private static boolean ACL_PART_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_PART_0")) return false;
    consumeToken(b, "!");
    return true;
  }

  // NETMASK | string []
  private static boolean ACL_PART_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_PART_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = NETMASK(b, l + 1);
    if (!r) r = ACL_PART_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // string []
  private static boolean ACL_PART_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACL_PART_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING);
    r = r && ACL_PART_1_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // []
  private static boolean ACL_PART_1_1_1(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // SYNTHETIC | F_CALL | SET | UNSET | CALL | PURGE | NEW  | ERROR | RETURN
  public static boolean ACTION(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ACTION")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION, "<action>");
    r = SYNTHETIC(b, l + 1);
    if (!r) r = F_CALL(b, l + 1);
    if (!r) r = SET(b, l + 1);
    if (!r) r = UNSET(b, l + 1);
    if (!r) r = CALL(b, l + 1);
    if (!r) r = PURGE(b, l + 1);
    if (!r) r = NEW(b, l + 1);
    if (!r) r = ERROR(b, l + 1);
    if (!r) r = RETURN(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'backend' identifier '{' [OBJECT_INTERNAL *] '}'
  public static boolean BACKEND(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BACKEND")) return false;
    if (!nextTokenIs(b, KEYWORD_BACKEND)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORD_BACKEND, IDENTIFIER, LC);
    r = r && BACKEND_3(b, l + 1);
    r = r && consumeToken(b, RC);
    exit_section_(b, m, BACKEND, r);
    return r;
  }

  // [OBJECT_INTERNAL *]
  private static boolean BACKEND_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BACKEND_3")) return false;
    BACKEND_3_0(b, l + 1);
    return true;
  }

  // OBJECT_INTERNAL *
  private static boolean BACKEND_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BACKEND_3_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!OBJECT_INTERNAL(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BACKEND_3_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // 'bereq'  ['.'   ('backend' | 'between_bytes_timeout' | 'body' | 'connect_timeout'
  //                             | 'first_byte_timeout' | HEADER | 'method' | 'proto'
  //                             | 'retries' |'uncacheable' | 'url' | 'xid'
  //                             )]
  public static boolean BEREQ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BEREQ")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BEREQ, "<bereq>");
    r = consumeToken(b, "bereq");
    r = r && BEREQ_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['.'   ('backend' | 'between_bytes_timeout' | 'body' | 'connect_timeout'
  //                             | 'first_byte_timeout' | HEADER | 'method' | 'proto'
  //                             | 'retries' |'uncacheable' | 'url' | 'xid'
  //                             )]
  private static boolean BEREQ_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BEREQ_1")) return false;
    BEREQ_1_0(b, l + 1);
    return true;
  }

  // '.'   ('backend' | 'between_bytes_timeout' | 'body' | 'connect_timeout'
  //                             | 'first_byte_timeout' | HEADER | 'method' | 'proto'
  //                             | 'retries' |'uncacheable' | 'url' | 'xid'
  //                             )
  private static boolean BEREQ_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BEREQ_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && BEREQ_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'backend' | 'between_bytes_timeout' | 'body' | 'connect_timeout'
  //                             | 'first_byte_timeout' | HEADER | 'method' | 'proto'
  //                             | 'retries' |'uncacheable' | 'url' | 'xid'
  private static boolean BEREQ_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BEREQ_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORD_BACKEND);
    if (!r) r = consumeToken(b, "between_bytes_timeout");
    if (!r) r = consumeToken(b, "body");
    if (!r) r = consumeToken(b, "connect_timeout");
    if (!r) r = consumeToken(b, "first_byte_timeout");
    if (!r) r = HEADER(b, l + 1);
    if (!r) r = consumeToken(b, "method");
    if (!r) r = consumeToken(b, "proto");
    if (!r) r = consumeToken(b, "retries");
    if (!r) r = consumeToken(b, "uncacheable");
    if (!r) r = consumeToken(b, "url");
    if (!r) r = consumeToken(b, "xid");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'beresp' ['.' ('age' | 'backend' | 'backend.ip' | 'backend.name' | 'body'
  //                             | 'do_esi' | 'do_gunzip' | 'do_gzip' | 'do_stream'
  //                             | 'grace' | HEADER | 'keep' | 'proto' | 'reason' | 'status'
  //                             | 'storage_hint' | 'ttl' | 'uncacheable' | 'was_304'
  //                        )]
  public static boolean BERESP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BERESP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BERESP, "<beresp>");
    r = consumeToken(b, "beresp");
    r = r && BERESP_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ['.' ('age' | 'backend' | 'backend.ip' | 'backend.name' | 'body'
  //                             | 'do_esi' | 'do_gunzip' | 'do_gzip' | 'do_stream'
  //                             | 'grace' | HEADER | 'keep' | 'proto' | 'reason' | 'status'
  //                             | 'storage_hint' | 'ttl' | 'uncacheable' | 'was_304'
  //                        )]
  private static boolean BERESP_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BERESP_1")) return false;
    BERESP_1_0(b, l + 1);
    return true;
  }

  // '.' ('age' | 'backend' | 'backend.ip' | 'backend.name' | 'body'
  //                             | 'do_esi' | 'do_gunzip' | 'do_gzip' | 'do_stream'
  //                             | 'grace' | HEADER | 'keep' | 'proto' | 'reason' | 'status'
  //                             | 'storage_hint' | 'ttl' | 'uncacheable' | 'was_304'
  //                        )
  private static boolean BERESP_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BERESP_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && BERESP_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'age' | 'backend' | 'backend.ip' | 'backend.name' | 'body'
  //                             | 'do_esi' | 'do_gunzip' | 'do_gzip' | 'do_stream'
  //                             | 'grace' | HEADER | 'keep' | 'proto' | 'reason' | 'status'
  //                             | 'storage_hint' | 'ttl' | 'uncacheable' | 'was_304'
  private static boolean BERESP_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BERESP_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "age");
    if (!r) r = consumeToken(b, KEYWORD_BACKEND);
    if (!r) r = consumeToken(b, "backend.ip");
    if (!r) r = consumeToken(b, "backend.name");
    if (!r) r = consumeToken(b, "body");
    if (!r) r = consumeToken(b, "do_esi");
    if (!r) r = consumeToken(b, "do_gunzip");
    if (!r) r = consumeToken(b, "do_gzip");
    if (!r) r = consumeToken(b, "do_stream");
    if (!r) r = consumeToken(b, "grace");
    if (!r) r = HEADER(b, l + 1);
    if (!r) r = consumeToken(b, "keep");
    if (!r) r = consumeToken(b, "proto");
    if (!r) r = consumeToken(b, "reason");
    if (!r) r = consumeToken(b, "status");
    if (!r) r = consumeToken(b, "storage_hint");
    if (!r) r = consumeToken(b, "ttl");
    if (!r) r = consumeToken(b, "uncacheable");
    if (!r) r = consumeToken(b, "was_304");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // RETURN | ERROR
  public static boolean BUITLIN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BUITLIN")) return false;
    if (!nextTokenIs(b, "<buitlin>", KEYWORD_ERROR, KEYWORD_RETURN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUITLIN, "<buitlin>");
    r = RETURN(b, l + 1);
    if (!r) r = ERROR(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'call' OBJECT
  public static boolean CALL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CALL")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL, "<call>");
    r = consumeToken(b, "call");
    r = r && OBJECT(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'client.' ('identity' | 'ip')
  public static boolean CLIENT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLIENT")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLIENT, "<client>");
    r = consumeToken(b, "client.");
    r = r && CLIENT_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'identity' | 'ip'
  private static boolean CLIENT_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLIENT_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "identity");
    if (!r) r = consumeToken(b, "ip");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' STATEMENT '}'
  public static boolean COMPOUND(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COMPOUND")) return false;
    if (!nextTokenIs(b, LC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LC);
    r = r && STATEMENT(b, l + 1);
    r = r && consumeToken(b, RC);
    exit_section_(b, m, COMPOUND, r);
    return r;
  }

  /* ********************************************************** */
  // '(' EXPRESSION ')'
  public static boolean CONDITION(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONDITION")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && EXPRESSION(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, CONDITION, r);
    return r;
  }

  /* ********************************************************** */
  // keyword_director identifier identifier '{' [ ('{' OBJECT_INTERNAL *'}' | OBJECT_INTERNAL) *]'}'
  public static boolean DIRECTOR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR")) return false;
    if (!nextTokenIs(b, KEYWORD_DIRECTOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORD_DIRECTOR, IDENTIFIER, IDENTIFIER, LC);
    r = r && DIRECTOR_4(b, l + 1);
    r = r && consumeToken(b, RC);
    exit_section_(b, m, DIRECTOR, r);
    return r;
  }

  // [ ('{' OBJECT_INTERNAL *'}' | OBJECT_INTERNAL) *]
  private static boolean DIRECTOR_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR_4")) return false;
    DIRECTOR_4_0(b, l + 1);
    return true;
  }

  // ('{' OBJECT_INTERNAL *'}' | OBJECT_INTERNAL) *
  private static boolean DIRECTOR_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR_4_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!DIRECTOR_4_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DIRECTOR_4_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // '{' OBJECT_INTERNAL *'}' | OBJECT_INTERNAL
  private static boolean DIRECTOR_4_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR_4_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DIRECTOR_4_0_0_0(b, l + 1);
    if (!r) r = OBJECT_INTERNAL(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' OBJECT_INTERNAL *'}'
  private static boolean DIRECTOR_4_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR_4_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LC);
    r = r && DIRECTOR_4_0_0_0_1(b, l + 1);
    r = r && consumeToken(b, RC);
    exit_section_(b, m, null, r);
    return r;
  }

  // OBJECT_INTERNAL *
  private static boolean DIRECTOR_4_0_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIRECTOR_4_0_0_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!OBJECT_INTERNAL(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DIRECTOR_4_0_0_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // ('else' (COMPOUND | IF_STATEMENT)) | ('elif' | 'elseif'| 'elsif') IF_INTERAL
  public static boolean ELSE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ELSE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELSE, "<else>");
    r = ELSE_0(b, l + 1);
    if (!r) r = ELSE_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'else' (COMPOUND | IF_STATEMENT)
  private static boolean ELSE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ELSE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORD_ELSE);
    r = r && ELSE_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
